# Voice_Change

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: voice.m4a
app/src/main/cpp/: com_jamff_voice_EffectUtils.h  voice_change.cpp
app/src/main/java/com/jamff/voice/: EffectUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
